--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,74 @@
-<router-outlet />
+@if (authService.getCurrentUser()) {
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+  <div class="container-fluid">
+    <span class="navbar-brand fw-bold">Table to Table</span>
+    <div class="d-flex">
+      <button class="btn btn-outline-light btn-sm me-2" (click)="toggleTheme()">
+        <i class="fa-solid fa-moon"></i>
+      </button>
+      <button class="btn btn-outline-light btn-sm" (click)="logout()">
+        <i class="fas fa-user"></i> Logout
+      </button>
+    </div>
+  </div>
+</nav>
+<div class="page-nav">
+  <router-outlet />
+</div>
+
+  <div class="fixed-bottom p-2 bg-primary">
+    <ul class="nav nav-pills nav-fill">
+      <li class="nav-item">
+        <a
+          class="nav-link text-white"
+          [routerLink]="['/dashboard']"
+          [routerLinkActive]="'active'"
+          (click)="goToCustomerView()"
+          role="button"
+          ><i class="fa-solid fa-house"></i>
+              <label class="ms-1">Home</label>
+          </a
+        >
+      </li>
+      <li class="nav-item">
+        <a
+          class="nav-link text-white"
+          [routerLink]="['/admin/shipments']"
+          [routerLinkActive]="'active'"
+          (click)="goToAdminView()"
+          role="button"
+          ><i class="fa-solid fa-paper-plane"></i>
+              <label class="ms-1">Shipments</label>
+          </a
+        >
+      </li>
+      <li class="nav-item">
+        <a
+          class="nav-link text-white"
+          [routerLink]="['/admin/employees']"
+          [routerLinkActive]="'active'"
+          (click)="goToEmployeeManagement()"
+          role="button"
+          ><i class="fa-solid fa-users-gear"></i>
+              <label class="ms-1">Employees</label>
+          </a
+        >
+      </li>
+      <li class="nav-item">
+        <a
+          class="nav-link text-white"
+          [routerLink]="['/admin/income']"
+          [routerLinkActive]="'active'"
+          (click)="goToIncome()"
+          role="button"
+          ><i class="fa-solid fa-money-bill-wave"></i>
+              <label class="ms-1">Income</label>
+          </a
+        >
+      </li>
+    </ul>
+  </div>
+}
+@else {
+  <router-outlet />
+}
