--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,5 +1,5 @@
 <div class="login-container">
-  <div class="container">
+  <div class="container-fluid">
     <div class="row justify-content-center">
       <div class="col-md-5 col-lg-4">
         <div class="login-card">
