--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,12 @@
   --accent-color: #ff4081;
 }
 
+.nav-pills {
+  --bs-nav-pills-border-radius: var(--bs-border-radius);
+  --bs-nav-pills-link-active-color: #fff;
+  --bs-nav-pills-link-active-bg: #1a2149;
+}
+
 .light-theme {
   --bg-color: #fafafa;
   --surface-color: #ffffff;
@@ -58,7 +64,8 @@ body {
   color: var(--text-color) !important;
 }
 
-.table td, .table th {
+.table td,
+.table th {
   border-color: var(--border-color) !important;
 }
 
@@ -88,11 +95,18 @@ body {
 }
 
 /* Ensure all text is visible in dark theme */
-.dark-theme h1, .dark-theme h2, .dark-theme h3, .dark-theme h4, .dark-theme h5, .dark-theme h6 {
+.dark-theme h1,
+.dark-theme h2,
+.dark-theme h3,
+.dark-theme h4,
+.dark-theme h5,
+.dark-theme h6 {
   color: var(--text-color) !important;
 }
 
-.dark-theme p, .dark-theme span, .dark-theme div {
+.dark-theme p,
+.dark-theme span,
+.dark-theme div {
   color: var(--text-color) !important;
 }
 
@@ -199,4 +213,31 @@ body:not(.dark-theme):not(.light-theme) .card {
 .timeline-item.active .timeline-content h6 {
   color: var(--primary-color);
   font-weight: bold;
+}
+
+.nav-link {
+  label {
+    display: none;
+  }
+  &.active {
+    label {
+      display: inline;
+    }
+  }
+}
+
+.page-nav {
+  position: fixed;
+  top: 48px;
+  overflow-y: auto;
+  padding: 8px 0px;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: calc(100dvh - 104px);
+}
+.modal {
+  top: 60px;
 }
